# jg-project-euler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cc  sources.cmake
src/: jg-project-euler  main.cc  makefile
src/other/: 3nplus1.cc  3nplus1.h
src/problems/: primes.cc  primes.h  problem1.cc  problem1.h  problem2.cc  problem2.h  problem3.cc  problem3.h  problem4.cc  problem4.h  problemX.cc  problemX.h
